syntax = "proto3";

option go_package = "/services/livetests/pkg/grpc/proto";

package livetests;

service LivetestsService {
    rpc CreateLivetest(CreateLivetestRequest) returns (CreateLivetestResponse) {}
    rpc SubscribeToLivetestEvents(SubscribeToLivetestEventsRequest) returns (SubscribeToLivetestEventsResponse){}
    rpc ListenLivetest(stream LivetestEventRequest) returns (stream LivetestEventResponse) {}
}

message Account {
    map<string, float> assets = 1;
}

message CreateLivetestRequest {
    map<string, Account> accounts = 1;
}

message CreateLivetestResponse {
    uint64 id = 1;
}

message SubscribeToLivetestEventsRequest {
    uint64 id = 1;
    string exchange_name = 2;
    string pair_symbol = 3;
}
    
message SubscribeToLivetestEventsResponse{
}

message LivetestEventRequest {
}

message LivetestEventResponse {
    string type = 1;
    string time = 2;
    string content = 3;
}
